# Notifications_sprint

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  diagram.puml  docker-compose.prod.yml  docker-compose.yml  get_html.py  pyproject.toml  test.py  tester.py
.github/workflows/: python.yml
Configs/: config.py  logger_notifications.py
Configs/nginx/: nginx.conf
Configs/postgres/: init.sql
Dockerfiles/admin/: Dockerfile
Dockerfiles/workers/: Dockerfile
admin/: pyproject.toml
admin/django/: manage.py
admin_panel/: .env.example
admin_panel/notification/: models.py
architecture/: diagram.puml  diagram_dmitry.puml  diagram_litivnov.puml
flask_app/: .env.example  Dockerfile  app.py  config.py  docker-compose.yml  main.py  requirements.txt  view.py
flask_app/db/: cache.py  postgresql.py  redis.py
flask_app/models/: models.py
flask_app/nginx/: nginx.conf
flask_app/schemas/: history.py  role.py  user.py
flask_app/utils/: jaeger.py  producer.py  rate_limit.py  tester.py  utils.py  welcome.py  workers.py
services/: utils.py  workers.py
storage/: docker-compose.yml
storage/config/: definitions.json
storage_consumers/bookmarks/: Dockerfile  listener.py
storage_consumers/websocket_consumer/: Dockerfile  listener.py  requirements.txt
storage_consumers/welcome/: Dockerfile  listener.py
templates/: base.html  bookmarks.html  mail.html  personal_selection.html  statistics.html  tip.html  welcome.html
websocket_server/: Dockerfile  main.py  requirements.txt
workers/event_listener/: __main__.py
(+78 files in other folders)
